# Old-good-days

./: .gitignore  Cargo.toml  index.css  index.html  readme.md  run.sh
.cargo/: config
.github/workflows/: rust.yml
docs/: index.html  package.json  tetris_rewrite.d.ts  tetris_rewrite.js  tetris_rewrite_bg.wasm  tetris_rewrite_bg.wasm.d.ts
src/: lib.rs  persist.rs  ref_container.rs  shape.rs  state.rs  tetris.rs
src/dom/: domtools.rs  lib.rs
src/snake/: food.rs  gameboard.rs  lib.rs  pos.rs  snake.rs
src/state/: lib.rs  ref_container.rs  state.rs
src/tetris/: lib.rs  pos.rs  shape.rs  tetris.rs
